--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "Allows a parent component to merge values into a child's props",
   "main": "dist/index.js",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "build": "rimraf dist && rollup -c && npm run minify",
     "minify": "uglifyjs $npm_package_main -c -m --toplevel -o $npm_package_main",
