--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
     "enzyme": "^2.9.1",
+    "eslint": "^4.7.2",
+    "eslint-plugin-react": "^7.4.0",
     "jest": "^21.1.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
@@ -76,9 +78,18 @@
   },
   "eslintConfig": {
     "parser": "babel-eslint",
-    "extends": [
-      "eslint:recommended"
+    "plugins": [
+      "react"
     ],
+    "extends": [
+      "eslint:recommended",
+      "plugin:react/recommended"
+    ],
+    "parserOptions": {
+      "ecmaFeatures": {
+        "jsx": true
+      }
+    },
     "env": {
       "node": true,
       "es6": true
